# Moose

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  gen_ref_pages.py  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: build.yml  documentation.yml  test.yml
Moose/: Moose.py
Moose/data/: NHAX.db  NOBX.db  OHAX.db  data_sources.txt
Theory/: index.html
binder/: postBuild
citing/: index.html
docs/: citing.md  examples.md  get_started.md  index.md
docs/examples/: Moose_fitting_backends.ipynb  bokeh.ipynb  matplotlib.ipynb  plotly.ipynb
docs/overrides/: main.html
examples/: examples.md  index.html
examples/CN/: 370-400nm_9ns_calib.txt
examples/Moose_fitting_backends/: Moose_fitting_backends.ipynb  index.html
examples/Multiple_species/: Multiple_species.ipynb  index.html
examples/N2SPS/: 20220302_s01_sig.cam
examples/bokeh/: bokeh.ipynb  index.html
examples/dask/: dask.ipynb  index.html
examples/matplotlib/: index.html
examples/plotly/: index.html  plotly.ipynb
gen_ref_pages/: index.html
get_started/: get_started.md  index.html
javascripts/: mathjax.js
overrides/: main.html
reference/Moose/: index.html  index.md
reference/Moose/FitUtil/: FitUtil.md  index.html
reference/Moose/Simulation/: Simulation.md  index.html
reference/SUMMARY/: SUMMARY.md  index.html
search/: search_index.json
src/Moose/: FitUtil.py  Simulation.py  __init__.py
src/Moose/data/: N2CB.sqbpro  N2PlusBX.db  data_sources.txt
tests/: conftest.py  test_Simulation.py
